# ai_mentor

./: Dockerfile  main.py  pyproject.toml
app/: app.py  build_rag.py  crew_test.py
app/chroma_db/: chroma.sqlite3
app/db/: database.py  models.py
chroma_db/: chroma.sqlite3
frontend/: index.html
